# everybody_codes_2024

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
quest01/: main.cpp
quest02/: main.cpp
quest03/: main.cpp
quest04/: main.cpp
quest05/: main.cpp
quest06/: main.cpp
quest07/: main.cpp
quest08/: main.cpp
quest09/: main.cpp
quest10/: main.cpp
quest11/: main.cpp
quest12/: main.cpp
quest13/: main.cpp
quest14/: main.cpp
quest15/: main.cpp
quest16/: main.cpp
quest17/: main.cpp
quest18/: main.cpp
